Revision history for NetworkManager-Strict

{{$NEXT}}
    -